--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "strictPropertyInitialization": false,
+    "strictTemplates": false,
+    "strictInputAccessModifiers": false,
     "types": []
   },
   "files": ["main.ts", "polyfills.ts"],
