--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/router": "16.1.1",
     "@types/jasmine": "4.3.2",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.4",
     "rxjs": "7.8.1",
     "tslib": "2.5.3",
     "zone.js": "0.13.1"
